--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 baseurl: '/'
 permalink: pretty
-title: 'helim.de'
+title: 'HELIM – Haus- und Eigentumsmanagement für Liegenschaften'
 
 logo:
   mobile: "images/logo/logo-mobile.svg"
