--- a/_data/seo.yml
+++ b/_data/seo.yml
@@ -1,4 +1,4 @@
 google_analytics_id:
 meta_twitter_site:
 meta_twitter_creator:
-copyright_text: 'HELIM'
+copyright_text: 'HELIM – Haus- und Eigentumsmanagement für Liegenschaften'
