Make tagline more crisp and concise
Change from 'Haus- und Eigentumsmanagement für Liegenschaften'
to 'Haus, Eigentum, Liegenschaften - Immobilien Management'

More punchy, easier to read, reinforces IM branding

--- a/_data/seo.yml
+++ b/_data/seo.yml
@@ -1,4 +1,4 @@
 google_analytics_id:
 meta_twitter_site:
 meta_twitter_creator:
-copyright_text: 'HELIM – Haus- und Eigentumsmanagement für Liegenschaften'
+copyright_text: 'HELIM – Haus, Eigentum, Liegenschaften - Immobilien Management'
