--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 baseurl: '/'
 permalink: pretty
-title: 'HELIM – Haus- und Eigentumsmanagement für Liegenschaften'
+title: 'HELIM – Haus, Eigentum, Liegenschaften - Immobilien Management'
 
 logo:
   mobile: "images/logo/logo-mobile.svg"
