Vollständiges Rebranding: HELIM → HELMONT Immobilien Management
- Domain: helim.de → helmont.de (CNAME)
- E-Mail: info@helim.de → info@helmont.de
- Branding: Alle HELIM-Referenzen → HELMONT
- Untertitel: 'Immobilien Management' (vereinfacht)
- Config, SEO, Header, Footer aktualisiert

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 baseurl: '/'
 permalink: pretty
-title: 'HELIM – Haus, Eigentum, Liegenschaften - Immobilien Management'
+title: 'HELMONT Immobilien Management'
 
 logo:
   mobile: "images/logo/logo-mobile.svg"
